# pm-research

./: .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  README.md  install.sh  pyproject.toml  requirements.txt
reverse engineering/: .gitignore  ACCEPTANCE.md  ALGORITHM.md  BLOCKERS.md  BLOCKERS_bot2855.md  BLOCKERS_ohanism.md  DECISIONS.md  DECISIONS_bot2855.md  DECISIONS_ohanism.md  EXPERIMENTS.md  FINAL_STRATEGY_ohanism.md  GIT_WORKFLOW.md  MASTER_PROMPT.md  METHODOLOGY.md  Makefile  PROGRESS.md  PROGRESS_TEMPLATE.md  PROGRESS_bot2855.md  PROGRESS_ohanism.md  README.md  RESULTS.md  RESULTS_bot2855.md  RESULTS_ohanism.md  pyproject.toml  requirements.txt
reverse engineering/LOGS/: 2026-05-28.md
reverse engineering/docs/: EXAMPLES.md  FEATURE_DICTIONARY.md  GOTCHAS.md  SCHEMA.md
reverse engineering/notes/: REFERENCES.md  VERIFIED_FACTS_RE.md  iam_policy_pm_research_re.json
reverse engineering/output/: holding_period_log.md
reverse engineering/output/ohanism/results/: phase2_stats.json  phase3_stats.json  phase4_per_asset.json  phase4_profitability.json  phase5_k2_gbt.json  phase6_c1_extended.json  phase6_c2_sequential.json  phase6_c3_irl.json  phase75_selection_clf.pkl  phase75_selection_sizing.json  phase76_twin_refined.json  phase77_oot.json  phase77_reconcile.json  (+6 more)
reverse engineering/output/results/: a3_rerun.json  part_b_diagnostics.json  part_b_fast.json  phase4_l2.json  phase4_regression.json  phase5_k1_window.json  pre5a_g6.json  pre5b_profile_likelihood.json  pre5c_reconciliation.json  pre5de_verification.json  pre5h_formula_comparison.json  pre5h_sign_audit.json
reverse engineering/scripts/: _daily_health_check.py  _probe_activity_pnl.py  _probe_dedup2.py  _probe_fills_trace.py  _probe_formula_comparison.py  _probe_positions.py  _probe_vol_dedup.py  _v3_s3_recency.py  _v4_bot2855_current.py  _v5_pmclob_coverage.py  canonical_skew.py  economic_offsets.py  flip_latency_full.py  full_rerun_a3.py  full_sync.py  part_b_diagnostics.py  part_b_fast.py  phase4_step1_sigma_implied.py  phase4_step1b_sigma_implied_v2.py  phase4_step2_sigma_estimators.py  phase4_step3_regression_cascade.py  phase4_step43b_regression_v2.py  phase4_step45_l2_structural.py  phase4_step45b_per_asset.py  phase4_step46_profitability.py  phase5_k1_build_data.py  phase5_k2_gbt_shap.py  phase6_c1_extended_features.py  phase6_c2_sequential.py  phase6_c3_irl.py  phase75_selection_sizing.py  phase76_twin_refined.py  phase77_oot_validation.py  phase77_reconcile.py  phase7_paper_twin.py  pre5a_chainlink_mtm.py  pre5b_profile_likelihood.py  pre5c_api_reconciliation.py  pre5de_pnl_verification.py  pre5f_position_reconciliation.py  (+12 more)
reverse engineering/src/reverse_engineering/: __init__.py  cli.py  config.py
reverse engineering/tests/integration/: test_phase1_reconciliation.py
reverse engineering/tests/unit/: test_digital_option.py  test_inventory.py  test_level_changes.py  test_sigma_estimators.py
(+82 files in other folders)
