[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "web3.*",
    "structlog.*",
    "pyarrow.*",
    "websockets.*",
    "yaml.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["eth_abi.*", "eth_utils.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["pm_research.metadata.wallet_attribution"]
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "TID", "TCH", "PTH", "ERA", "RUF"]
ignore = ["S101", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
