[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reverse-engineering"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "structlog.*",
    "pyarrow.*",
    "lightgbm.*",
    "xgboost.*",
    "shap.*",
    "sklearn.*",
    "statsmodels.*",
    "arch.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "torch.*",
    "polars.*",
    "numpy.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "TID", "TCH", "PTH", "ERA", "RUF"]
ignore = ["S101", "S311", "S324", "RUF002", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20"]
"notebooks/*" = ["T20", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
